slick and overflow fix

--- a/src/components/DSearch/DSearch.css
+++ b/src/components/DSearch/DSearch.css
@@ -7,7 +7,7 @@
     flex-direction: row;
 }
 .d-search input{
-    padding: 15px 70px;
+    padding: 14px 60px;
     border: 0.5px solid grey;
     font-size: 18px;
     margin: 6px 0;
