--- a/src/components/Reviews/reviews.css
+++ b/src/components/Reviews/reviews.css
@@ -3,12 +3,12 @@ h1{
     font-size: 42px;
 }
 .reviews{
-    padding: 2.7rem;
+    padding: 2rem;
 }
 .review{
-    padding: 1rem 2rem;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-    margin: 12px 10px;
+    padding: 3rem 2rem;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+    margin: 10px;
     text-align: start;
 }
 .review h2{
@@ -16,7 +16,7 @@ h1{
     color: rgb(7, 80, 109);
 }
 .review .stars{
-    padding: 10px 0;
+    padding: 12px 0;
 }
 .review .stars i{
     color: goldenrod;
